make sure header is always visible

--- a/web-app/src/components/App/App.scss
+++ b/web-app/src/components/App/App.scss
@@ -7,5 +7,7 @@
 }
 
 .App__Wrapper {
-    height: calc(100% - 126px); // Make header height using variable
+    height: calc(100% - 126px); // Make header height using variabe
+
+    overflow-x: hidden;
 }
