--- a/web-app/src/components/Header/Header.scss
+++ b/web-app/src/components/Header/Header.scss
@@ -8,6 +8,8 @@ $headerHeight: 125px;
 
   display: flex;
   justify-content: center;
+
+  z-index: 5;
 }
 
 .Header__Wrapper {
